added more cases

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,11 +35,24 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name=".backgroundtasks.jobscheduler.receiver.JobSchedulerOnChargedReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action."/>
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED"/>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
+            </intent-filter>
+        </receiver>
+
         <service
             android:name=".backgroundtasks.jobscheduler.JobSchedulerService"
             android:label="jobschedulerservice"
             android:permission="android.permission.BIND_JOB_SERVICE"/>
 
+        <service android:name=".backgroundtasks.jobscheduler.service.JobSchedulerOnChargedService"
+            android:label="JobSchedulerOnChargedService"
+            android:permission="android.permission.BIND_JOB_SERVICE"/>
 
         <activity android:name=".backgroundtasks.jobscheduler.JobSchedulerActivity"></activity>
     </application>
